--- a/canvas/3_.cavasState.md
+++ b/canvas/3_.cavasState.md
@@ -27,6 +27,17 @@
 - 3 call context.restore()
 
 
+> why save and restore states?
+> in case you have setup a bunch of manually complex tasks to do and you dont
+> want to recreate every time
+> context.restore() is what you call when you're done
+> that will put the drawing state back into the state that it was before you called
+> Save and made any changes.
+
+
+
+
+
 
 
 
