--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -4,11 +4,11 @@
 
 ### 3-step to drawing
 
-i.   get a reference to the canvas element
-ii.  get the drawing context from the element using:
+i.   get a reference to the canvas element .    
+ii.  get the drawing context from the element using:     
      ex:
          getContext()
-iii. if result of getContext() is not null, draw away!
+iii. if result of getContext() is not null, draw away!    
 
 
 
