--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -6,9 +6,11 @@
 
 i.   get a reference to the canvas element .    
 ii.  get the drawing context from the element using:     
-     ex:
-         getContext()
-iii. if result of getContext() is not null, draw away!    
+
++     ex:    
+*         getContext()   
+
+iii. if result of getContext() is not null, draw away!       
 
 
 
