--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -7,8 +7,8 @@
 i.   get a reference to the canvas element .    
 ii.  get the drawing context from the element using:     
 
-+     ex:    
-*         getContext()   
+    ex:    
+       getContext()   
 
 iii. if result of getContext() is not null, draw away!       
 
