--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -5,13 +5,13 @@
 ### 3-step to drawing
 
 i.   get a reference to the canvas element .    
-ii.   get the drawing context from the element using:     
+ii. &nbsp; get the drawing context from the element using:     
 ```   
        Ex:
        getContext()   
 ```       
 
-iii. if result of getContext() is not null, draw away!       
+iii.&nbsp; if result of getContext() is not null, draw away!       
 
 
 
