--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -2,7 +2,7 @@
 
 - to draw in canvas, you'll need the 2D drawing Api
 
-### 3-step to drawing
+### 3-step to drawing :monkey:
 
 i.   get a reference to the canvas element .    
 ii. &nbsp;get the drawing context from the element using:     
