--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -27,9 +27,9 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
 
 ### drawing techniques
 
-- fillStyle   => to use when filling css color, gradient, pattern(defaults:black)
-- strokeStyle => to use on strokes css color, gradient, pattern (defaults:black)
-- lineWidth   => width of the imaginary pen to use when drawing lines (defaults 1)
+- <kbd>fillStyle</kbd>   => to use when filling css color, gradient, pattern(defaults:black)
+- <kbd>strokeStyle</kbd> => to use on strokes css color, gradient, pattern (defaults:black)
+- <kbd>lineWidth</kbd>   => width of the imaginary pen to use when drawing lines (defaults 1)
 
 
 ### drawing shapes basics
