--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -34,7 +34,7 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
 
 ### drawing shapes basics
 
-### rectangles
+#### rectangles
 - this is canvas only primitive shape supported by canvas
 
 - functions:
@@ -49,7 +49,7 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
    * fillRect(x,y,w,h)   => fills a given rectangle with the current fillStyle
    
    
-### lines
+#### lines
 - lines can be created in several ways
 
 - attributes/ functions
