--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -35,7 +35,7 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
 ### drawing shapes basics
 
 #### rectangles
-- this is canvas only primitive shape supported by canvas
+- this is ***canvas only primitive shape*** supported by canvas
 
 - functions:
 
