--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -41,22 +41,20 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
 
 > coords, width and height
    
-   * clearRect(x,y,w,h)  => erases existing rectangle, makes the are fully  
-                            transparent
+   * <kbd>clearRect(x,y,w,h)</kbd>  => erases existing rectangle, makes the are fully transparent . 
+     
+   * <kbd>strokeRect(x,y,w,h)</kbd> => outlines a rectangle with the current strokeStyle
    
-   * strokeRect(x,y,w,h) => outlines a rectangle with the current strokeStyle
-   
-   * fillRect(x,y,w,h)   => fills a given rectangle with the current fillStyle
+   * <kbd>fillRect(x,y,w,h)</kbd>   => fills a given rectangle with the current fillStyle
    
    
 #### lines
 - lines can be created in several ways
 
-- attributes/ functions
+- ___attributes/ functions___
 
-   * moveTo(x,y) => moves the imaginary pen to the given coordinates 
-                    but it doesn't draw anything
-                    
+   * <kbd>moveTo(x,y)</kbd> => moves the imaginary pen to the given coordinates but it doesn't draw anything . 
+                      
    * lineTo(x,y) => draws a line from pen current position to new point
    
    //how the line looks on screen
