--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -37,7 +37,7 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
 #### rectangles
 - this is ***canvas only primitive shape*** supported by canvas
 
-- functions:
+___functions___:
 
 > coords, width and height
    
@@ -51,19 +51,19 @@ iii.&nbsp; if result of getContext() is not null, draw away!       
 #### lines
 - lines can be created in several ways
 
-- ___attributes/ functions___
+___attributes/ functions___
 
    * <kbd>moveTo(x,y)</kbd> => moves the imaginary pen to the given coordinates but it doesn't draw anything . 
                       
-   * lineTo(x,y) => draws a line from pen current position to new point
+   * <kbd>lineTo(x,y)</kbd> => draws a line from pen current position to new point
    
    //how the line looks on screen
-   * lineWidth   => determines pixel width
-   * lineCap     => line endings: butt(default), round, square 
-   * lineJoin    => how lines join together: round, bevel
+   * <kbd>lineWidth</kbd>   => determines pixel width
+   * <kbd>lineCap</kbd>     => line endings: butt(default), round, square 
+   * <kbd>lineJoin</kbd>    => how lines join together: round, bevel
    
-   * beginPath() => begins a new set of drawing ops
-   * stroke()    => collects all of the current path commands and draws them. 
+   * <kbd>beginPath()</kbd> => begins a new set of drawing ops
+   * <kbd>stroke()</kbd>    => collects all of the current path commands and draws them. 
    
    
    
