--- a/canvas/2_.canvas2Ddrawing.md
+++ b/canvas/2_.canvas2Ddrawing.md
@@ -41,11 +41,11 @@ ___functions___:
 
 > coords, width and height
    
-   * <kbd>clearRect(x,y,w,h)</kbd>  => erases existing rectangle, makes the are fully transparent . 
+-  <kbd>clearRect(x,y,w,h)</kbd>  => erases existing rectangle, makes the are fully transparent . 
      
-   * <kbd>strokeRect(x,y,w,h)</kbd> => outlines a rectangle with the current strokeStyle
+- <kbd>strokeRect(x,y,w,h)</kbd> => outlines a rectangle with the current strokeStyle
    
-   * <kbd>fillRect(x,y,w,h)</kbd>   => fills a given rectangle with the current fillStyle
+- <kbd>fillRect(x,y,w,h)</kbd>   => fills a given rectangle with the current fillStyle
    
    
 #### lines
@@ -53,17 +53,19 @@ ___functions___:
 
 ___attributes/ functions___
 
-   * <kbd>moveTo(x,y)</kbd> => moves the imaginary pen to the given coordinates but it doesn't draw anything . 
+
+- <kbd>moveTo(x,y)</kbd> => moves the imaginary pen to the given coordinates but it doesn't draw anything . 
                       
-   * <kbd>lineTo(x,y)</kbd> => draws a line from pen current position to new point
+- <kbd>lineTo(x,y)</kbd> => draws a line from pen current position to new point
    
-   //how the line looks on screen
-   * <kbd>lineWidth</kbd>   => determines pixel width
-   * <kbd>lineCap</kbd>     => line endings: butt(default), round, square 
-   * <kbd>lineJoin</kbd>    => how lines join together: round, bevel
+___how the line looks on screen___
+
+* <kbd>lineWidth</kbd>   => determines pixel width
+* <kbd>lineCap</kbd>     => line endings: butt(default), round, square 
+* <kbd>lineJoin</kbd>    => how lines join together: round, bevel
    
-   * <kbd>beginPath()</kbd> => begins a new set of drawing ops
-   * <kbd>stroke()</kbd>    => collects all of the current path commands and draws them. 
+* <kbd>beginPath()</kbd> => begins a new set of drawing ops
+* <kbd>stroke()</kbd>    => collects all of the current path commands and draws them. 
    
    
    
